--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>形狀元素</p>
             <img
               class="w-100"
-              src="./img/geometry_shapes_black_and_white.jpg"
+              src="./img/index/geometry_shapes_black_and_white.jpg"
             />
           </a>
           <a
@@ -65,7 +65,7 @@
             class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link"
           >
             <p>路徑與文字</p>
-            <img class="w-100" src="./img/path.png" />
+            <img class="w-100" src="./img/index/path.png" />
           </a>
           <a
             href="./4.svg_style.html"
@@ -73,7 +73,7 @@
             class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link"
           >
             <p>樣式與轉換屬性</p>
-            <img class="w-100" src="./img/color.jpg" />
+            <img class="w-100" src="./img/index/style.jpg" />
           </a>
         </div>
       </section>
@@ -90,7 +90,7 @@
             class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link"
           >
             <p class="">Selection 選取</p>
-            <img class="rounded w-50" src="./img/select.jpg" />
+            <img class="rounded w-50" src="./img/index/select.jpg" />
           </a>
           <a
             href="./6.data_binding.html"
@@ -98,7 +98,7 @@
             class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link"
           >
             <p class="">Binding 綁定</p>
-            <img class="rounded w-50" src="./img/bind.jpg" />
+            <img class="rounded w-50" src="./img/index/bind.jpg" />
           </a>
         </div>
       </section>
@@ -114,7 +114,7 @@
             target="_blank"
             class="text-center p-2 col-6 dark-link"
           >
-            <img class="rounded w-100" src="./img/import-data.jpg" />
+            <img class="rounded w-100" src="./img/index/import-data.jpg" />
           </a>
           <div class="p-2 col-6">
             <p class="">JSON</p>
@@ -136,25 +136,25 @@
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Array</p>
             <a href="./8.d3-array.html" target="_blank">
-              <img class="h-50 w-100" src="./img/array.png" />
+              <img class="h-50 w-100" src="./img/index/array.png" />
             </a>
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Time Formats</p>
             <a href="./9.d3-time-format.html" target="_blank">
-              <img class="h-50 w-100" src="./img/time.jpg" />
+              <img class="h-50 w-100" src="./img/index/time.jpg" />
             </a>
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Number Formats</p>
             <a href="./10.d3-number-format.html" target="_blank">
-              <img class="h-50 w-100" src="./img/numbers.jpg" />
+              <img class="h-50 w-100" src="./img/index/numbers.jpg" />
             </a>
           </div>
           <div class="p-3 col-lg-3 col-md-6 col-sm-12">
             <p class="text-center">Random</p>
             <a href="./11.d3-random.html" target="_blank">
-              <img class="w-100" src="./img/random.jpg" />
+              <img class="w-100" src="./img/index/random.jpg" />
             </a>
           </div>
         </div>
@@ -178,19 +178,19 @@
           <div class="p-3 col-lg-4 col-md-4 col-sm-12">
             <p class="text-center">Generator</p>
             <a href="./12.helper-function-generator.html" target="_blank">
-              <img class="w-100" src="./img/generator.jpg" />
+              <img class="w-100" src="./img/index/generator.jpg" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="text-center">Component</p>
             <a href="./13.helper-function-components.html" target="_blank">
-              <img class="w-100" src="./img/components.jpg" />
+              <img class="w-100" src="./img/index/components.jpg" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="text-center">Layout</p>
             <a href="./14.helper-function-layouts.html" target="_blank">
-              <img class="w-100" src="./img/layouts.jpg" />
+              <img class="w-100" src="./img/index/layouts.jpg" />
             </a>
           </div>
         </div>
@@ -207,13 +207,13 @@
           <div class="p-3 col-md-6 col-sm-12">
             <p class="text-center">比例尺</p>
             <a href="./15.scale.html" target="_blank">
-              <img class="w-100" src="./img/scale.png" />
+              <img class="w-100" src="./img/index/scale.png" />
             </a>
           </div>
           <div class="p-3 col-md-6 col-sm-12">
             <p class="text-center">軸線/刻度/工具提示框</p>
             <a href="./16.axes.html" target="_blank">
-              <img class="w-50" src="./img/xy-axis.png" />
+              <img class="w-50" src="./img/index/xy-axis.png" />
             </a>
           </div>
         </div>
@@ -230,28 +230,19 @@
           <div class="p-3 col-md-4 col-sm-12">
             <p class="text-center">插補 Interpolate</p>
             <a href="./17.interpolate.html" target="_blank">
-              <img
-                class="w-100"
-                src="./img/geometry_shapes_black_and_white.jpg"
-              />
+              <img class="w-100" src="./img/index/d3.interpolate.jpg" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-sm-12">
             <p class="text-center">色彩</p>
             <a href="./18.colors.html" target="_blank">
-              <img
-                class="w-100"
-                src="./img/geometry_shapes_black_and_white.jpg"
-              />
+              <img class="w-100" src="./img/index/d3.color.jpg" />
             </a>
           </div>
           <div class="p-3 col-md-4 col-sm-12">
             <p class="text-center">RWD</p>
             <a href="./19.responsive.html" target="_blank">
-              <img
-                class="w-100"
-                src="./img/geometry_shapes_black_and_white.jpg"
-              />
+              <img class="w-100" src="./img/index/responsive.jpg" />
             </a>
           </div>
         </div>
@@ -265,7 +256,7 @@
             <p class="mb-1">圓餅圖</p>
             <p>pie chart</p>
             <a href="./20.pie-chart.html" target="_blank">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+              <img class="w-80" src="./img/index/pie.png" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
