--- a/index.html
+++ b/index.html
@@ -263,14 +263,14 @@
             <p class="mb-1">甜甜圈圖</p>
             <p>donut chart</p>
             <a href="./21.donut-chart.html" target="_blank">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+              <img class="w-80" src="./img/index/donut-chart.png" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">散點圖</p>
             <p>scatter chart</p>
             <a href="./22.scatter-chart.html" target="_blank">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+              <img class="w-80" src="./img/index/scatter-plot.png" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
@@ -305,14 +305,14 @@
             <p class="mb-1">折線圖</p>
             <p>line chart</p>
             <a href="./27.line-chart.html" target="_blank">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+              <img class="w-80" src="./img/index/line-chart.jpg" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">多線折線圖</p>
             <p>multiple line chart</p>
             <a href="./28.multiple-line-chart.html" target="_blank">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+              <img class="w-80" src="./img/index/multi-linechart.png" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
